--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -25,12 +25,10 @@ $link-hover-color: null; // same as $link-color
  * color scheme. */
 
 $dark-body-bg:      #222;
-$dark-body-color:   white;
+$dark-body-color:   #aaa;
 
 $dark-card-bg:     #333;
 $dark-card-cap-bg: #444;
-
-$dark-text-muted: #aaa;
 
 
 // ======
